New features: hint indicators. Debug features through query string. Hook in to GPS or WSAD. Process LW iCal stream for events (one off using python script)

--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,8 @@
     <div id="fog"></div>
     <div id="map"></div>
     <div id="notInAreaBanner">
-        You are not in the Exeter area or location permissions are unavaliable or disabled.
+        <p>This experence is for enjoying Exeter's Lost Weekend. It requires access to your current location and for you to be in central exeter. </p>
+        <p> text will disapear once the above conditions are met (might take a half a minute for GPS to locate).</p>
     </div>
     <script src="app.bundle.js"></script>
 </body>
