--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,16 @@
     </div>
 
 
+    <nav id="menuBar">
+        <button class="hamburger"></button>
+        <ul class="links">
+            <li>Coming up</li>
+            <li>Now</li>
+            <li>All events</li>
+        </ul>
+    </nav>
+
+
 
 
     <div id="fog"></div>
