--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,8 @@
 
 
     <nav id="menuBar">
-        <button class="hamburger"></button>
-        <ul class="links">
+        <button class="hamburger" id="menu-toggle">&#9776;</button>
+        <ul class="links" id="main-menu-items" style="display:none;">
             <li>Coming up</li>
             <li>Now</li>
             <li>All events</li>
