--- a/static/index.html
+++ b/static/index.html
@@ -28,13 +28,11 @@
 
     <div id="app" style="display:none;">
     <nav id="menuBar">
-<<<<<<< HEAD
         <button class="hamburger" id="menu-toggle">&#9776;</button>
         <ul class="links" id="main-menu-items" style="display:none;">
             <li>Coming up</li>
             <li>Now</li>
             <li>All events</li>
-=======
         <img class="hamburger" src="/asset1.svg"></img> 
                   
         <ul class="links">
@@ -47,9 +45,12 @@
                 <div class="boxed">
                     <li>Show found</li></div>
             <li>Reveal map</li>
->>>>>>> master
         </ul>
     </nav>
+
+    <div id="home">
+        <img class="tick button" src="Asset 5.svg"></img>
+    </div>
 
 
 
@@ -57,7 +58,7 @@
     <div id="fog"></div>
     <div id="map"></div>
     <div id="notInAreaBanner">
-        <p>Experence Exeter's Lost Weekend with the interactive map. </p>
+        <p>Experience Exeter's Lost Weekend with the interactive map. </p>
         <p>This app needs access to your current location, and will not work </p>
         <p>if you are outside of central Exeter.</p>
         <p>Please be patient, it may take a few moments to locate your GPS.</p>
