styled popup windows

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
         <section id="welcome">
             <img class="logo" src="circle_graphic.svg" alt="Lost Weekend"></img>
             <div>
-                <img class="title" src="/assets/asset2.svg" alt="Lost in art. Which events would you like to view?" />
+                <img class="title" src="/assets/title.svg" alt="Lost in art. Which events would you like to view?" />
                 <div class="buttons">
                     <button id="enow" class="button" value="now">Events<br/>now</button>
                     <button id="etoday" class="button" value="today">Events<br/>today</button>
@@ -29,37 +29,51 @@
         <!-- <section id="app" style="visibility:hidden;"> -->
         <section id="app" style="visibility:hidden;">
             <nav id="menuBar">
-                <img class="hamburger" title="Menu" alt="Menu" width="24" src="/assets/asset1.svg"></img>
-
+                <div>
+                <img class="hamburger" title="Menu" alt="Menu" width="24" src="/assets/hamburger.svg"></img>
+                </div>
                 <ul class="links">
-                    <div class="boxed">
-                        <li>Events now</li>
-                    </div>
-                    <div class="boxed">
-                        <li>Events today</li>
-                    </div>
-                    <div class="boxed">
-                        <li>All events</li>
-                    </div>
-                    <div class="boxed">
-                        <li>Show found</li>
-                    </div>
-                    <li>Reveal map</li>
+                        <li class="boxed">
+                            <h3>Events Now</h3>
+                        </li>
+                        <li class="boxed">
+
+                                <hr>
+                                <h3>Events today</h3>
+                            
+                        </li>
+                        <li class="boxed">
+                            
+                                <hr>
+                                <h3>All events</h3>
+                        </li>
+                        <li class="boxed">
+
+                                <hr>
+                                <h3>reveal map</h3>
+                        </li>
+                        <li class="boxed">
+
+                                <hr>
+                                <h3>Show found</h3>
+                        </li>
                 </ul>
             </nav>
 
             <div id="fog"></div>
             <div id="map"></div>
             <div id="notInAreaBanner">
+                <div id="bannerTitle"> 
+                <h2>Get lost in Art</h2>
+                </div>
                 <p>Experience Exeter's Lost Weekend with the interactive map. </p>
-                <p>This app needs access to your current location, and will not work </p>
-                <p>if you are outside of central Exeter.</p>
+                <p>This app needs access to your current location, and will not work if you are outside of central Exeter. </p>
                 <p>Please be patient, it may take a few moments to locate your GPS.</p>
-                <p>Happy searching!</p>
+                <p>Happy searching.</p>
             </div>
 
             <div id="home">
-                <img class="tick button" src="asset/Asset 5.svg"></img>
+                <img class="tick button" src="asset/tick.svg"></img>
             </div>
 
         </section>
