added svg files

--- a/static/index.html
+++ b/static/index.html
@@ -57,6 +57,8 @@
             <div id="fog"></div>
             <div id="map"></div>
             <div id="notInAreaBanner">
+                <div id="notInAreaBannerWrapper">
+                
                 <div id="bannerTitle">
                     <h2>Get lost in Art</h2>
                 </div>
@@ -64,7 +66,9 @@
                 <p>This app needs access to your current location, and will not work if you are outside of central Exeter. </p>
                 <p>Please be patient, it may take a few moments to locate your GPS.</p>
                 <p>Happy searching.</p>
+                </div>
             </div>
+        
 
             <div id="home">
                 <img class="tick button" src="asset/tick.svg"></img>
