changed circle img to png

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <main>
         <!-- this is our loading splash screen -->
         <section id="welcome">
-            <img class="logo" src="circle_graphic.svg" alt="Lost Weekend"></img>
+            <img class="logo" src="assets/circle_graphic.png" alt="Lost Weekend"></img>
             <div>
                 <img class="title" src="/assets/title.svg" alt="Lost in art. Which events would you like to view?" />
                 <div class="buttons">
