assets urls to relative

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
         <section id="welcome">
             <img class="logo" src="assets/circle_graphic.png" alt="Lost Weekend"></img>
             <div>
-                <img class="title" src="/assets/title.svg" alt="Lost in art. Which events would you like to view?" />
+                <img class="title" src="./assets/title.svg" alt="Lost in art. Which events would you like to view?" />
                 <div class="buttons">
                     <button id="enow" class="button" value="now">Events<br/>now</button>
                     <!-- <button id="etoday" class="button" value="today">Events<br/>today</button> -->
@@ -30,7 +30,7 @@
         <section id="app" style="visibility:hidden;">
             <nav id="menuBar">
                 <div>
-                    <img class="hamburger" title="Menu" alt="Menu" width="24" src="/assets/hamburger.svg"></img>
+                    <img class="hamburger" title="Menu" alt="Menu" width="24" src="./assets/hamburger.svg"></img>
                 </div>
                 <ul class="links">
                     <li class="boxed filter-link" data-eventtypes="now">
