working on achievements. current overflow bug...

--- a/static/index.html
+++ b/static/index.html
@@ -72,9 +72,12 @@
         </section>
         <section id="achivements" style="visibility:hidden;">
             <div class="buttons">
-                <button class="button" value="events">Events<br/>now</button>
+                <button class="button" value="event_achievements">Events<br/>now</button>
                 <!-- <button id="etoday" class="button" value="today">Events<br/>today</button> -->
-                <button class="button" value="achivements">All<br/>events</button>
+                <button class="button" value="other_achievements">All<br/>events</button>
+
+                <div id="event_achievements"></div>
+                <div id="other_achievements"></div>
             </div>
         </section>
 
