--- a/static/index.html
+++ b/static/index.html
@@ -72,13 +72,15 @@
         </section>
         <section id="achivements" style="visibility:hidden;">
             <div class="buttons">
-                <button class="button" value="event_achievements">Events<br/>now</button>
-                <!-- <button id="etoday" class="button" value="today">Events<br/>today</button> -->
-                <button class="button" value="other_achievements">All<br/>events</button>
-
-                <div id="event_achievements"></div>
-                <div id="other_achievements"></div>
+                <!-- <button class="button" value="event_achievements">Events<br/>now</button>
+                <button class="button" value="other_achievements">All<br/>events</button> -->
+                <button id="backtomap" class="button" value="back">Back</button>
             </div>
+            <h2>Events</h2>
+            <div id="event_achievements"></div>
+            <h2>Other achievements</h2>
+            <div id="other_achievements"></div>
+
         </section>
 
 
