--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://mapzen.com/js/mapzen.css">
     <link rel="stylesheet" href="styles.css">
 
+    <!--Shortcut icon-->
+    <link rel="shortcut icon" href="favicon.png" />
+
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60337429-6"></script>
     <script>
