tweek to style for welcome page

--- a/static/comming_soon.html
+++ b/static/comming_soon.html
@@ -37,7 +37,7 @@
         }
         
         #wrapper {
-            padding: 10%;
+            padding: 1em 10%;
         }
     </style>
 </head>
