--- a/static/comming_soon.html
+++ b/static/comming_soon.html
@@ -47,7 +47,7 @@
         <h1>Lost in art will be live 6-8th October</h1>
         <div class="videoWrapper">
 
-            <iframe src="https://www.youtube.com/embed/4WhgdJvBFVo?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/_s2r_rGvVe4?rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
 
     </div>
