--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="videoWrapperLimmiter">
                 <div id="vid" class="videoWrapper">
-                    <iframe id="video" src="https://www.youtube.com/embed/4WhgdJvBFVo?autoplay=1&amp;rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="video" src="https://www.youtube.com/embed/_s2r_rGvVe4?autoplay=1&amp;rel=0&amp;showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
                 </div>
 
             </div>
