styling colour & font weights

--- a/static/index.html
+++ b/static/index.html
@@ -103,7 +103,7 @@
             <div class="buttons">
                 <!-- <button class="button" value="event_achievements">Events<br/>now</button>
                 <button class="button" value="other_achievements">All<br/>events</button> -->
-                <button id="backtomap" class="button" value="back" data-click-analytic="achivements-back">Back</button>
+                <img src="assets/back.svg" alt="back" id="backtomap" value="back" data-click-analytic="achivements-back"/>
             </div>
             <h2>Events</h2>
             <div id="event_achievements"></div>
