delay location request and provied links when issues

--- a/static/index.html
+++ b/static/index.html
@@ -85,16 +85,41 @@
 
             <div id="fog"></div>
             <div id="map"></div>
-            <div id="notInAreaBanner">
-                <div id="notInAreaBannerWrapper">
+            <div id="mapInfoBanner">
+                <div id="mapInfoBannerWrapper">
+                    <div id="map_intro_text">
 
-                    <div id="bannerTitle">
-                        <h2>Get lost in Art</h2>
+                        <div class="bannerTitle">
+                            <h2>Get lost in Art</h2>
+                        </div>
+                        <p>Experience Exeter's Lost Weekend with the interactive map. </p>
+                        <p>This app needs access to your current location and will not work unless permission for this is granted.</p>
+                        <p>Please be patient, it may take a few moments to locate your GPS.</p>
+                        <p>Happy searching.</p>
+
+                        <p>If this message doesn't go away soon these links might help:</p>
+                        <ul>
+                            <li><a href="https://support.google.com/chrome/answer/142065?co=GENIE.Platform%3DAndroid&hl=en">
+                                Chrome - Share your location
+                            </a></li>
+
+                            <li> Location Services in
+                                <a href="https://support.apple.com/kb/HT201674">iOS 4</a> ,&nbsp;
+                                <a href="https://support.apple.com/kb/HT202339">iOS 5</a>,&nbsp;
+                                <a href="https://support.apple.com/kb/HT202588">iOS 6</a>,&nbsp;
+                                <a href="https://support.apple.com/kb/HT201357">iOS 7</a>, or&nbsp;
+                                <a href="https://support.apple.com/en-gb/ht203033">iOS 8</a></li>
+                        </ul>
+
                     </div>
-                    <p>Experience Exeter's Lost Weekend with the interactive map. </p>
-                    <p>This app needs access to your current location, and will not work if you are outside of central Exeter. </p>
-                    <p>Please be patient, it may take a few moments to locate your GPS.</p>
-                    <p>Happy searching.</p>
+
+                    <div id="not_in_area">
+                        <div class="bannerTitle">
+                            <h2>Head in to Exeter</h2>
+                        </div>
+                        <p>This app is for exploring Exeter's Lost In Art events and will only work when you are located in central Exeter.</p>
+
+                    </div>
                 </div>
             </div>
 
