confirm on map revel

--- a/static/index.html
+++ b/static/index.html
@@ -99,16 +99,16 @@
 
                         <p>If this message doesn't go away soon these links might help:</p>
                         <ul>
-                            <li><a href="https://support.google.com/chrome/answer/142065?co=GENIE.Platform%3DAndroid&hl=en">
+                            <li><a target="_blank" href="https://support.google.com/chrome/answer/142065?co=GENIE.Platform%3DAndroid&hl=en">
                                 Chrome - Share your location
                             </a></li>
 
                             <li> Location Services in
-                                <a href="https://support.apple.com/kb/HT201674">iOS 4</a> ,&nbsp;
-                                <a href="https://support.apple.com/kb/HT202339">iOS 5</a>,&nbsp;
-                                <a href="https://support.apple.com/kb/HT202588">iOS 6</a>,&nbsp;
-                                <a href="https://support.apple.com/kb/HT201357">iOS 7</a>, or&nbsp;
-                                <a href="https://support.apple.com/en-gb/ht203033">iOS 8</a></li>
+                                <a target="_blank" href="https://support.apple.com/kb/HT201674">iOS 4</a> ,&nbsp;
+                                <a target="_blank" href="https://support.apple.com/kb/HT202339">iOS 5</a>,&nbsp;
+                                <a target="_blank" href="https://support.apple.com/kb/HT202588">iOS 6</a>,&nbsp;
+                                <a target="_blank" href="https://support.apple.com/kb/HT201357">iOS 7</a>, or&nbsp;
+                                <a target="_blank" href="https://support.apple.com/en-gb/ht203033">iOS 8</a></li>
                         </ul>
 
                     </div>
@@ -128,7 +128,7 @@
             <div class="buttons">
                 <!-- <button class="button" value="event_achievements">Events<br/>now</button>
                 <button class="button" value="other_achievements">All<br/>events</button> -->
-                <img src="assets/back.svg" alt="back" id="backtomap" value="back" data-click-analytic="achivements-back"/>
+                <img src="assets/back.svg" alt="back" id="backtomap" value="back" data-click-analytic="achivements-back" />
             </div>
             <h2>Events</h2>
             <div id="event_achievements"></div>
